kcube_server.h

// device io
void kcube_server_set(int device_index, uint8_t *message_buffer);