kcube.py

	
	# ksg101 messages
	kcube.mgmsg_hub_req_bayused.argtypes = [c_uint8_p, c_uint8]
	kcube.mgmsg_hub_req_bayused.restype = None
	kcube.mgmsg_hub_get_bayused.argtypes = [c_uint8_p, c_uint8_p]
	kcube.mgmsg_hub_get_bayused.restype = None
	kcube.mgmsg_pz_ack_pzstatusupdate.argtypes = [c_uint8_p, c_uint8]
	kcube.mgmsg_pz_ack_pzstatusupdate.restype = None
	kcube.mgmsg_pz_set_zero.argtypes = [c_uint8_p, c_uint8, c_uint8]
	kcube.mgmsg_pz_set_zero.restype = None
	kcube.mgmsg_pz_req_maxtravel.argtypes = [c_uint8_p, c_uint8, c_uint8]
	kcube.mgmsg_pz_req_maxtravel.restype = None
	kcube.mgmsg_pz_get_maxtravel.argtypes = [c_uint8_p, c_uint16_p, c_uint16_p]
	kcube.mgmsg_pz_get_maxtravel.restype = None
	kcube.mgmsg_pz_set_tsg_iosettings.argtypes = [c_uint8_p, c_uint8, c_uint16, c_uint16, c_uint16, c_int32]
	kcube.mgmsg_pz_set_tsg_iosettings.restype = None
	kcube.mgmsg_pz_req_tsg_iosettings.argtypes = [c_uint8_p, c_uint8, c_uint8]
	kcube.mgmsg_pz_req_tsg_iosettings.restype = None
	kcube.mgmsg_pz_get_tsg_iosettings.argtypes = [c_uint8_p, c_uint16_p, c_uint16_p, c_uint16_p, c_int32_p]
	kcube.mgmsg_pz_get_tsg_iosettings.restype = None
	kcube.mgmsg_pz_req_tsg_reading.argtypes = [c_uint8_p, c_uint8, c_uint8]
	kcube.mgmsg_pz_req_tsg_reading.restype = None
	kcube.mgmsg_pz_get_tsg_reading.argtypes = [c_uint8_p, c_uint16_p, c_int16_p, c_uint16_p]
	kcube.mgmsg_pz_get_tsg_reading.restype = None
	kcube.mgmsg_ksg_set_kcubemmiparams.argtypes = [c_uint8_p, c_uint8, c_uint16, c_uint16, c_uint16, c_uint16]
	kcube.mgmsg_ksg_set_kcubemmiparams.restype = None
	kcube.mgmsg_ksg_req_kcubemmiparams.argtypes = [c_uint8_p, c_uint8, c_uint8]
	kcube.mgmsg_ksg_req_kcubemmiparams.restype = None
	kcube.mgmsg_ksg_get_kcubemmiparams.argtypes = [c_uint8_p, c_uint16_p, c_uint16_p, c_uint16_p, c_uint16_p]
	kcube.mgmsg_ksg_get_kcubemmiparams.restype = None
	kcube.mgmsg_ksg_set_kcubetrigioconfig.argtypes = [c_uint8_p, c_uint8, c_uint16, c_uint16, c_uint16, c_uint16, c_uint16, c_int32, c_int32, c_uint16]
	kcube.mgmsg_ksg_set_kcubetrigioconfig.restype = None
	kcube.mgmsg_ksg_req_kcubetrigioconfig.argtypes = [c_uint8_p, c_uint8, c_uint8]
	kcube.mgmsg_ksg_req_kcubetrigioconfig.restype = None
	kcube.mgmsg_ksg_get_kcubetrigioconfig.argtypes = [c_uint8_p, c_uint16_p, c_uint16_p, c_uint16_p, c_uint16_p, c_uint16_p, c_int32_p, c_int32_p, c_uint16_p]
	kcube.mgmsg_ksg_get_kcubetrigioconfig.restype = None

	# print
	kcube.kcube_message_dump.argtypes = [c_uint8_p]
	kcube.kcube_message_dump.restype = None
	kcube.kcube_message_id_string.argtypes = [c_uint16]
	kcube.kcube_message_id_string.restype = c_char_p
	kcube.kcube_message_print_header.argtypes = [c_uint8_p]
	kcube.kcube_message_print_header.restype = None
	kcube.kcube_message_print_kpz101_pzstatus.argtypes = [c_uint8_p]
	kcube.kcube_message_print_kpz101_pzstatus.restype = None
	kcube.kcube_message_print_ksg101_pzstatus.argtypes = [c_uint8_p]
	kcube.kcube_message_print_ksg101_pzstatus.restype = None
	
	return kcube

def msg_buffer():
	return (ctypes.c_uint8 * KCUBE_MESSAGE_MAX_SIZE)()

def init_kpz101(libkcube, kpz101, dest, channel):
	msg = msg_buffer()
	# initalize kpz101
	print("initalizing kpz101")
	# mod_set_chanenablestate
	libkcube.mgmsg_mod_set_chanenablestate(msg, dest, channel, 0x02) # disable hv output
	libkcube.kcube_server_set(kpz101, msg)
	# hw_stop_updatemsgs
	libkcube.mgmsg_hw_stop_updatemsgs(msg, dest)
	libkcube.kcube_server_set(kpz101, msg)
	# pz_set_poscontrolmode
	libkcube.mgmsg_pz_set_poscontrolmode(msg, dest, channel, 0x03) # open loop (smooth)
	libkcube.kcube_server_set(kpz101, msg)
	# pz_set_outputvolts
	libkcube.mgmsg_pz_set_outputvolts(msg, dest, channel, 0x0000) # 0 V
	libkcube.kcube_server_set(kpz101, msg)
	# pz_set_outputpos
	libkcube.mgmsg_pz_set_outputpos(msg, dest, channel, 0x0000) # 0 um
	libkcube.kcube_server_set(kpz101, msg)
	# pz_set_inputvoltssrc
	libkcube.mgmsg_pz_set_inputvoltssrc(msg, dest, channel, 0x00) # software on, ext off, pot off
	libkcube.kcube_server_set(kpz101, msg)
	# pz_set_piconsts
	libkcube.mgmsg_pz_set_piconsts(msg, dest, channel, 100, 20) # prop, int control loop constants
	libkcube.kcube_server_set(kpz101, msg)
	# pz_set_outputlut
	libkcube.mgmsg_pz_set_outputlut(msg, dest, channel, 0, 0)
	libkcube.kcube_server_set(kpz101, msg)
	# pz_set_outputlutparams
	libkcube.mgmsg_pz_set_outputlutparams(msg, dest, channel, 0x0000, 0, 1, 0, 0, 0, 1, 1, 0) # output lut off
	libkcube.kcube_server_set(kpz101, msg)
	# pz_stop_lutoutput
	libkcube.mgmsg_pz_stop_lutoutput(msg, dest, channel)
	libkcube.kcube_server_set(kpz101, msg)
	# pz_set_eepromparams
	#libkcube.mgmsg_pz_set_eepromparams(msg, dest, channel, 0x0640)
	#libkcube.kcube_server_set(kpz101, msg)
	# pz_set_tpz_dispsettings
	libkcube.mgmsg_pz_set_tpz_dispsettings(msg, dest, 26) # display intensity (? investigate more)
	libkcube.kcube_server_set(kpz101, msg)
	# pz_set_tpz_iosettings
	libkcube.mgmsg_pz_set_tpz_iosettings(msg, dest, 0x01, 0x03) # 75 V limit, ext sma feedback
	libkcube.kcube_server_set(kpz101, msg)
	# kpz_set_kcubemmiparams
	libkcube.mgmsg_kpz_set_kcubemmiparams(msg, dest, channel, 0x01, 0x01, 256, 0x00, 0x0000, 0x7FFF, 40, 1, 10)
	libkcube.kcube_server_set(kpz101, msg)
	# kpz_set_kcubetrigioconfig
	libkcube.mgmsg_kpz_set_kcubetrigioconfig(msg, dest, channel, 0x00, 0x01, 0x00, 0x01) # disable triggers
	libkcube.kcube_server_set(kpz101, msg)

def init_ksg101(libkcube, ksg101, dest, channel):
	msg = msg_buffer()
	# initalize ksg101
	print("initalizing ksg101")
	# mod_set_chanenablestate
	libkcube.mgmsg_mod_set_chanenablestate(msg, dest, channel, 0x01)
	libkcube.kcube_server_set(ksg101, msg)
	# hw_stop_updatemsgs
	libkcube.mgmsg_hw_stop_updatemsgs(msg, dest)
	libkcube.kcube_server_set(ksg101, msg)
	# pz_ack_pzstatusupdate
	#libkcube.mgmsg_pz_ack_pzstatusupdate(msg, dest)
	#libkcube.kcube_server_set(ksg101, msg)
	# pz_set_eepromparams
	#libkcube.mgmsg_pz_set_eepromparams(msg, dest, channel, 0x07f9)
	#libkcube.kcube_server_set(ksg101, msg)
	# pz_set_tpz_dispsettings
	libkcube.mgmsg_pz_set_tpz_dispsettings(msg, dest, 26)
	libkcube.kcube_server_set(ksg101, msg)
	# pz_set_tsg_iosettings
	libkcube.mgmsg_pz_set_tsg_iosettings(msg, dest, channel, 1, 1, 30000)
	libkcube.kcube_server_set(ksg101, msg)
	# ksg_set_kcubemmiparams
	libkcube.mgmsg_ksg_set_kcubemmiparams(msg, dest, channel, 20, 5, 10)
	libkcube.kcube_server_set(ksg101, msg)
	# ksg_set_kcubetrigioconfig
	libkcube.mgmsg_ksg_set_kcubetrigioconfig(msg, dest, channel, 0, 1, 0, 1, 0, 100, 100)
	libkcube.kcube_server_set(ksg101, msg)

def zero_pz_stage(libkcube, kpz101, ksg101, dest, channel, dwell=20):
	msg = msg_buffer()
	print("zeroing pz stage")
	# set kpz101 hv out to 0 volts
	# pz_set_outputvolts
	libkcube.mgmsg_pz_set_outputvolts(msg, dest, channel, 0x0000) # 0 V
	libkcube.kcube_server_set(kpz101, msg)
	# pz_set_poscontrolmode
	libkcube.mgmsg_pz_set_poscontrolmode(msg, dest, channel, 0x03) # open loop (smooth)
	libkcube.kcube_server_set(kpz101, msg)
	# mod_set_channel_enablestate
	libkcube.mgmsg_mod_set_chanenablestate(msg, dest, channel, 0x01) # enable hv output
	libkcube.kcube_server_set(kpz101, msg)
	# zero ksg101
	# pz_set_zero
	libkcube.mgmsg_pz_set_zero(msg, dest, channel)
	libkcube.kcube_server_set(ksg101, msg)
	# wait until zeroed
	sleep(dwell)


#==============================================================================#
#																			  #
#																			  #
#																			  #
#==============================================================================#

